<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">梦想闹钟</string>
	<string name="alarm_setting">闹钟设置</string>
	
	<string name="add_alarm">添加闹钟</string>
	<string name="change_alarm">保存闹钟</string>
	<string name="monday">一</string>
	<string name="tuesday">二</string>
	<string name="wednesday">三</string>
	<string name="thursday">四</string>
	<string name="friday">五</string>
	<string name="saturday">六</string>
	<string name="sunday">日</string>
	
	<string name="PM2_5">PM\n2.5</string>
	
	<string name="weather_main">天气详情</string>
	<string name="weather_setting">城市设置</string>
	
	
	<string name="alarm_list">查看闹钟</string>
	
	<string name="action_settings">Action</string>
    <string name="menu_settings">Settings</string>
    <string name="sliding_menu_user_setting">用户名</string>
    <string name="sliding_menu_alarm_setting">闹钟设置</string>
    <string name="sliding_menu_weather_setting">天气设置</string>
    <string name="sliding_menu_quit">退出登陆</string>
	<string name="sliding_menu_friends_setting">好友设置</string>
	<string name="sliding_menu_communicate">联系我们</string>
	
	<string name="sign_in_rank">签到排行</string>
	<string name="sign_in_informations">收到嘲笑</string>
	<string name="about_sign_in">签到规则</string>
	
	<string name="dream_clock_title">梦想闹钟</string>
	<string name="common_clock_title">生活闹钟</string>
	
	<string name="change_user_info">提交修改</string>
	
	<string name="weather_icon">天气图标</string>
	<string name="bottom_bar_first">First</string>

	<string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
</resources>
