<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_change_alarm_timepicker_height"
        android:scrollbarSize="@dimen/activity_change_alarm_timepicker_bar_size"
        android:scrollbarFadeDuration="80"
        android:scrollbarStyle="outsideOverlay"
        />
	<RelativeLayout 
	    android:id="@+id/alarm_setting"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="@dimen/activity_change_alarm_min_padding"
	    >
	    <Button 
	        android:id="@+id/monday"
	        android:layout_alignParentTop="true"
	        android:layout_width="@dimen/activity_change_alarm_day_btn_size"
	        android:layout_height="@dimen/activity_change_alarm_day_btn_size"
	        android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_max"
	        android:background="@drawable/enable_button_shape_circle"
	        android:text="@string/monday"
	        android:textColor="#FFFFFF"
	        android:textSize="@dimen/activity_change_alarm_day_btn_text_size"
	        />
	    <Button 
	        android:id="@+id/tuesday"
	        android:layout_alignTop="@id/monday"
	        android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
	        android:layout_toRightOf="@id/monday"
	        android:layout_alignParentTop="true"
	        android:layout_width="@dimen/activity_change_alarm_day_btn_size"
	        android:layout_height="@dimen/activity_change_alarm_day_btn_size"
	        android:background="@drawable/enable_button_shape_circle"
	        android:text="@string/tuesday"
	        android:textColor="#FFFFFF"
	        android:textSize="@dimen/activity_change_alarm_day_btn_text_size"
	        />
	    <Button 
	        android:id="@+id/wednesday"
	        android:layout_alignTop="@id/monday"
	        android:layout_toRightOf="@id/tuesday"
	        android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
	        android:layout_alignParentTop="true"
			android:layout_width="@dimen/activity_change_alarm_day_btn_size"
	        android:layout_height="@dimen/activity_change_alarm_day_btn_size"
	        android:background="@drawable/enable_button_shape_circle"
	        android:text="@string/wednesday"
	        android:textColor="#FFFFFF"
	        android:textSize="@dimen/activity_change_alarm_day_btn_text_size"
	        />
   	    <Button 
	        android:id="@+id/thursday"
	        android:layout_alignTop="@id/monday"
	        android:layout_toRightOf="@id/wednesday"
	        android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
	        android:layout_alignParentTop="true"
	        android:layout_width="@dimen/activity_change_alarm_day_btn_size"
	        android:layout_height="@dimen/activity_change_alarm_day_btn_size"
	        android:background="@drawable/enable_button_shape_circle"
			android:text="@string/thursday"
	        android:textColor="#FFFFFF"
	        android:textSize="@dimen/activity_change_alarm_day_btn_text_size"
	        />
   	    <Button 
	        android:id="@+id/friday"
	        android:layout_alignTop="@id/monday"
	        android:layout_toRightOf="@id/thursday"
	        android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
	        android:layout_alignParentTop="true"
	        android:layout_width="@dimen/activity_change_alarm_day_btn_size"
	        android:layout_height="@dimen/activity_change_alarm_day_btn_size"
	        android:background="@drawable/enable_button_shape_circle"
	        android:text="@string/friday"
	        android:textColor="#FFFFFF"
	        android:textSize="@dimen/activity_change_alarm_day_btn_text_size"
	        />
   	    <Button 
	        android:id="@+id/saturday"
	        android:layout_alignTop="@id/monday"
  	        android:layout_toRightOf="@id/friday"
			android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
	        android:layout_alignParentTop="true"
	        android:layout_width="@dimen/activity_change_alarm_day_btn_size"
	        android:layout_height="@dimen/activity_change_alarm_day_btn_size"
	        android:background="@drawable/disable_button_shape_circle"
	        android:text="@string/saturday"
	        android:textColor="#2087FC"
	        android:textSize="@dimen/activity_change_alarm_day_btn_text_size"
	        />
   	    <Button 
	        android:id="@+id/sunday"
	        android:layout_alignTop="@id/monday"
	        android:layout_toRightOf="@id/saturday"
	        android:layout_alignParentTop="true"
			android:layout_width="@dimen/activity_change_alarm_day_btn_size"
	        android:layout_height="@dimen/activity_change_alarm_day_btn_size"
	        android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
	        android:background="@drawable/disable_button_shape_circle"
	        android:text="@string/sunday"
	        android:textColor="#2087FC"
	        android:textSize="@dimen/activity_change_alarm_day_btn_text_size"
	        />
	</RelativeLayout>
	<LinearLayout
	    android:id="@+id/AlarmWelcome"
	    android:layout_marginTop="24dp"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:gravity="center"
	    android:background="@drawable/layout_gray_stroke"
	    android:orientation="vertical" >
	    <EditText
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:id="@+id/welcomeText"
	        android:textSize="18sp"
	        android:textColor="#CCCCCC"
	        android:inputType="text"
	        />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/AlarmSong"
	    android:layout_margin="8dp"
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:gravity="center"
	    android:background="@drawable/layout_gray_stroke"
	    android:orientation="vertical" >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:id="@+id/alarmSongText"
	        android:textSize="18sp"
	        android:textColor="#CCCCCC"
	        />
	</LinearLayout>
	
	<RelativeLayout 
   	    android:id="@+id/AlarmVoicepower"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="10dp"
	    >
		<SeekBar
			android:id="@+id/voice_seek"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:max="100"
			android:progress="50"/>
		<TextView 
		    android:id="@+id/min_voice"
		    android:layout_below="@id/voice_seek"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="8dp"
		    android:text="Min"
		    android:textColor="#2087FC"
		    android:layout_alignParentLeft="true"
		    />
		<TextView 
		    android:id="@+id/max_voice"
		    android:layout_below="@id/voice_seek"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="Max"
		    android:paddingRight="8dp"
		    android:textColor="#2087FC"
		    android:layout_alignParentRight="true"
		    />

	</RelativeLayout>
</LinearLayout>
