<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF" >

        <cn.jlu.ge.knightView.KnightNumberPicker
            android:id="@+id/hourNumberPicker"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_change_alarm_timepicker_height"
            android:layout_weight="1"
            android:paddingLeft="20dp" />

        <cn.jlu.ge.knightView.KnightNumberPicker
            android:id="@+id/minsNumberPicker"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_change_alarm_timepicker_height"
            android:layout_weight="1"
            android:paddingRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm_setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_max"
        android:layout_marginRight="@dimen/activity_change_alarm_day_btn_margin_left_max"
        android:paddingTop="@dimen/activity_change_alarm_min_padding" >

        <Button
            android:id="@+id/monday"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_change_alarm_day_btn_size"
            android:layout_weight="1"
            android:background="@drawable/enable_button_shape_circle"
            android:text="@string/monday"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/activity_change_alarm_day_btn_text_size" />

        <Button
            android:id="@+id/tuesday"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_change_alarm_day_btn_size"
            android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
            android:layout_weight="1"
            android:background="@drawable/enable_button_shape_circle"
            android:text="@string/tuesday"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/activity_change_alarm_day_btn_text_size" />

        <Button
            android:id="@+id/wednesday"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_change_alarm_day_btn_size"
            android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
            android:layout_weight="1"
            android:background="@drawable/enable_button_shape_circle"
            android:text="@string/wednesday"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/activity_change_alarm_day_btn_text_size" />

        <Button
            android:id="@+id/thursday"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_change_alarm_day_btn_size"
            android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
            android:layout_weight="1"
            android:background="@drawable/enable_button_shape_circle"
            android:text="@string/thursday"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/activity_change_alarm_day_btn_text_size" />

        <Button
            android:id="@+id/friday"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_change_alarm_day_btn_size"
            android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
            android:layout_weight="1"
            android:background="@drawable/enable_button_shape_circle"
            android:text="@string/friday"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/activity_change_alarm_day_btn_text_size" />

        <Button
            android:id="@+id/saturday"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_change_alarm_day_btn_size"
            android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
            android:layout_weight="1"
            android:background="@drawable/disable_button_shape_circle"
            android:text="@string/saturday"
            android:textColor="#2087FC"
            android:textSize="@dimen/activity_change_alarm_day_btn_text_size" />

        <Button
            android:id="@+id/sunday"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_change_alarm_day_btn_size"
            android:layout_marginLeft="@dimen/activity_change_alarm_day_btn_margin_left_min"
            android:layout_weight="1"
            android:background="@drawable/disable_button_shape_circle"
            android:text="@string/sunday"
            android:textColor="#2087FC"
            android:textSize="@dimen/activity_change_alarm_day_btn_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AlarmWelcome"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/layout_gray_stroke"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/welcomeTextEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableBottom="#2087FC"
            android:inputType="text"
            android:textColor="#2087FC"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AlarmSong"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:background="@drawable/layout_gray_stroke"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/alarmSongText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2087FC"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/AlarmVoicepower"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <SeekBar
            android:id="@+id/voice_seek"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50" />

        <TextView
            android:id="@+id/min_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/voice_seek"
            android:paddingLeft="8dp"
            android:text="Min"
            android:textColor="#2087FC" />

        <TextView
            android:id="@+id/max_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/voice_seek"
            android:paddingRight="8dp"
            android:text="Max"
            android:textColor="#2087FC" />
    </RelativeLayout>

</LinearLayout>